Update .gitignore to ignore unnecessary files
Former-commit-id: 875f51103d15271917371f3a08def261bc5f8484

--- a/.gitignore
+++ b/.gitignore
@@ -63,8 +63,8 @@ CMakeLists.txt.user*
 *vcxproj.*
 
 # MinGW generated files
-*.Debug
-*.Release
+.Debug
+.Release
 
 # Python byte code
 *.pyc
@@ -81,7 +81,7 @@ build/
 out/
 
 # Qt 特有的缓存文件
-*.pro.user*
-*.pro.user.*
-*.pro.*
-*.pro.user
+.pro.user*
+.pro.user.*
+.pro.*
+.pro.user
